# proxy

./: .gitignore  README.md  main.py  start.sh  sync.sh
c/: CMakeLists.txt
c/src/client/: main.c
c/src/server/: main.c
c/src/shared_functions/: shared_functions.c  shared_functions.h  tests.c
python/: main.py
python/src/client/: clientMain.py
python/src/server/: handleClients.py  serverMain.py
rust/: Cargo.toml
rust/src/: main_client.rs  main_server.rs  test_crypto.rs
rust/src/client/: client.rs
rust/src/server/: mod.rs  server.rs
rust/src/shared_functions/: crypto.rs  mod.rs  network.rs
src/: RSA.py  utils.py
src/Client/: essai_client.py
src/client/: clientMain.py
src/server/: handleClients.py  main.py  serverMain.py
