[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "test_crypto"
path = "src/test_crypto.rs"

[dependencies]
openssl = "0.10.45"
reqwest = { version = "0.11.14", features = ["blocking"] }
